# website-monitor

./: .gitignore  README.md  pyproject.toml
config/: config.example.yml
monitor/: __main__.py
monitor/common/: logger.py  model.py  settings.py
monitor/consumer/: database_writer.py  db.py  receiver.py
monitor/producer/: sender.py  website_checker.py
monitor/tests/: conftest.py  test_checker.py  test_kafka.py  test_postgres_storage.py
